# recsys-tasks

./: pyproject.toml
input_data/: 1_cosine_similarity.csv  3_sparse_matrix.csv  4_users_based.csv  5_items_based.csv
input_data/2_cluster_size/: example.csv  task_1_users.csv
recsys_tasks/: 1_cosine_similarity.ipynb  2_cluster_size.ipynb  3_sparse_matrix.ipynb  4_users_based.ipynb  5_items_based.ipynb  6_confidence_coefficient.ipynb
recsys_tasks/annotations/: common.py
recsys_tasks/conf/: settings.py
recsys_tasks/processors/: cluster_size.py  confidence_coefficient.py  cosine_similarity.py  items_based.py  sparse_matrix.py  users_based.py
