[tool.poetry]
name = "recsys_tasks"
version = "0.0.1"
description = "Solutions modules for RecSys tasks"
authors = ["Kirill Vershinin <kir9ver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
jupyter = "^1.1.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
